# FCE

./: .gitignore  AStar.cpp  FCE.sln  README.md
FCE/: FCE.vcxproj  FCE.vcxproj.filters
FCE/Headers/: Voronoi.h
FCE/textures/: bar_concret.tif
FVR/: CMakeLists.txt  FVR.vcxproj  FVR.vcxproj.filters
FVR/Header/: Handles.h  VulkanFrontEnd.h  vk_DescriptorBuilder.h  vk_Helpers.h  vk_engine.h  vk_initializers.h  vk_mesh.h  vk_textures.h  vk_types.h
FVR/Scr/: VulkanFrontEnd.cpp  vk_DescriptorBuilder.cpp  vk_Helpers.cpp  vk_engine.cpp  vk_initializers.cpp  vk_mesh.cpp  vk_textures.cpp
Headers/: AStar.h
Headers/Collision/: CollisionTable.h
Headers/Components/: CommonComponents.h  EnemyComponent.h
Headers/Core/: Timing.h
Headers/Debug/: BulletDebugDraw.h  EngineTools.h
Headers/Maps/: Level.h  World.h
Headers/Systems/: CameraSystem.h  EnemySystem.h  InputSystem.h  MovementSystem.h  RenderSystem.h
Headers/UI/: Inspectable.h
MoveOn/: MoveOn.vcxproj  MoveOn.vcxproj.filters  PCH.h
MoveOn/Shaders/: compile.bat
MoveOn/Worlds/: FirstLevel.ldtk  SecondLevel.ldtk
MoveOn/headers/: EnemyFunction.h  HealthComponent.h  HealthSystem.h  InputFunctions.h  LoadingLevel.h  WeaponComponent.h  WeaponSystem.h
MoveOn/src/: EnemyFunction.cpp  HealthComponent.cpp  HealthSystem.cpp  InputFunctions.cpp  LoadingLevel.cpp  Source.cpp  WeaponComponent.cpp  WeaponSystem.cpp
Shaders/2D/: DebugPoint2D.vert
Shaders/3D/: DebugLine.vert  DebugLine.vert.spv  DebugPoint.frag  DebugPoint.vert.spv
Src/: Voronoi.cpp
Src/Components/: MovementComponent.cpp
Src/Core/: Core.cpp  (+4 more)
(+52 files in other folders)
